--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "crypto": "^1.0.1",
     "crypto-js": "^3.1.9-1",
     "express": "^4.17.1",
+    "fs-extra": "^8.1.0",
     "ip": "^1.1.5",
     "macaddress": "^0.2.9",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
-    "sqlite3": "^4.1.0"
+    "sqlite3": "^4.1.0",
+    "yauzl": "^2.10.0",
+    "zip-dir": "^1.0.2"
   }
 }
